# rust-web-stack

./: .env  .gitignore  Cargo.toml  README.md  Taskfile.yml
database/: docker-compose.yml  settings.env
database/flyway/sql/: V001__init.sql
src/: main.rs
